k3s/media/gluetun.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gluetun
  name: gluetun
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gluetun
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gluetun
    spec:
      containers:
        - env:
            - name: OPENVPN_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: media-secret-vpn
                  key: password
            - name: OPENVPN_USER
              valueFrom:
                secretKeyRef:
                  name: media-secret-vpn
                  key: username
            - name: VPN_SERVICE_PROVIDER
              value: "expressvpn"
            - name: VPN_TYPE
              value: "openvpn"
            - name: HTTPPROXY
              value: "on"
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
          image: qmcgaw/gluetun
          name: gluetun
          ports:
            - containerPort: 8888
              protocol: TCP
            - containerPort: 8388
              protocol: TCP
            - containerPort: 8388
              protocol: UDP
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /gluetun
              subPath: gluetun-config
              name: config
            - mountPath: /dev/net/tun
              name: dnt
      restartPolicy: Always
      volumes:
        - name: dnt
          hostPath:
            path: /dev/net/tun
        - name: config
          persistentVolumeClaim:
            claimName: local-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gluetun
  name: gluetun
  namespace: media
spec:
  ports:
    - name: "8888"
      port: 8888
      targetPort: 8888
  type: LoadBalancer
  selector:
    app: gluetun
