k3s/media/jackett.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jackett
    spec:
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          ports:
            - containerPort: 9117
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              subPath: jackett-config
              name: config
      restartPolicy: Always
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: local-media-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jackett
  name: jackett
  namespace: media
spec:
  ports:
    - name: "webui"
      port: 80
      targetPort: 9117
  type: ClusterIP
  selector:
    app: jackett
