k3s/media/radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
          image: linuxserver/radarr:latest
          name: radarr
          ports:
            - containerPort: 7878
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: media
            - mountPath: /config
              subPath: radarr-config
              name: config
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: local-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: radarr
  name: radarr
  namespace: media
spec:
  ports:
    - name: "7878"
      port: 7878
      targetPort: 7878
  type: LoadBalancer
  selector:
    app: radarr
