k3s/media/sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/New_York
          image: linuxserver/sonarr:latest
          name: sonarr
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /data
              name: media
            - mountPath: /config
              subPath: sonarr-config
              name: config
      restartPolicy: Always
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media-pvc
        - name: config
          persistentVolumeClaim:
            claimName: local-media-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
  namespace: media
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  type: LoadBalancer
  selector:
    app: sonarr
