k3s/media/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: media-ingress
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`plex.local.io`)
      services:
        - kind: Service
          name: plex
          port: 32400
    - kind: Rule
      match: Host(`jackett.local.io`)
      services:
        - kind: Service
          name: jackett
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`radarr.local.io`)
      services:
        - kind: Service
          name: radarr
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`sonarr.local.io`)
      services:
        - kind: Service
          name: sonarr
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`transmission.local.io`)
      services:
        - kind: Service
          name: transmission
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`bazarr.local.io`)
      services:
        - kind: Service
          name: bazarr
          port: 80
          scheme: http
